<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">


	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginBottom="15sp"
		android:orientation="vertical">


		<Button
			android:id="@+id/one"
			android:layout_width="fill_parent"
			android:layout_marginLeft="60dp"
			android:layout_marginRight="60dp"
			android:text="@string/one"
			style="@style/home_button" />

		<Button
			android:id="@+id/two"
			android:layout_width="fill_parent"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:text="@string/two"
			style="@style/home_button" />


		<Button
			android:id="@+id/three"
			android:layout_width="fill_parent"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:text="@string/three"
			style="@style/home_button" />


		<Button
			android:id="@+id/clickMe"
			android:layout_width="fill_parent"
			android:text="@string/click_me"
			style="@style/home_button" />

		<Button
			android:id="@+id/four"
			android:layout_width="fill_parent"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:text="@string/four"
			style="@style/home_button" />

		<Button
			android:id="@+id/five"
			android:layout_width="fill_parent"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:text="@string/five"
			style="@style/home_button" />

		<Button
			android:id="@+id/six"
			android:layout_width="fill_parent"
			android:layout_marginLeft="60dp"
			android:layout_marginRight="60dp"
			android:text="@string/six"
			style="@style/home_button" />


	</LinearLayout>

</ScrollView>